@@ -56,7 +56,7 @@ Engine.prototype._search = function() {
             else {
                 self.next_backend_url();
             }
-            setTimeout("self._search()", 1000);
+            setTimeout("self._search()", 500);
         }
     };
     console.debug("SEARCH:"+url);
